--- a/.github/workflows/gradually-deprecated.yaml
+++ b/.github/workflows/gradually-deprecated.yaml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version-file: ./.go-version
-      - run: ./scripts/run-gradually-deprecated.sh
+      - run: bash ./scripts/run-gradually-deprecated.sh
       - name: Add waiting-response on fail
         if: failure()
         uses: actions-ecosystem/action-add-labels@v1
