--- a/.github/workflows/gradually-deprecated.yaml
+++ b/.github/workflows/gradually-deprecated.yaml
@@ -11,6 +11,7 @@ on:
     paths:
       - '.github/workflows/gradually-deprecated.yaml'
       - '**.go'
+      - './scripts/run-gradually-deprecated.sh'
 
 jobs:
   test:
