support new resource azurerm_storage_mover

--- a/.github/labeler-pull-request-triage.yml
+++ b/.github/labeler-pull-request-triage.yml
@@ -283,6 +283,9 @@ service/sql:
 service/storage:
   - internal/services/storage/**/*
 
+service/storagemover:
+  - internal/services/storagemover/**/*
+
 service/stream-analytics:
   - internal/services/streamanalytics/**/*
 
