adding waiting-response on build failure and update issue labeler (#21413)

--- a/.github/workflows/tflint.yaml
+++ b/.github/workflows/tflint.yaml
@@ -3,6 +3,7 @@ name: Terraform Schema Linting
 
 permissions:
   contents: read
+  pull-requests: write
 
 on:
   pull_request:
@@ -27,3 +28,11 @@ jobs:
       - run: bash scripts/gogetcookie.sh
       - run: make tools
       - run: make tflint
+      - name: Add waiting-response on fail
+        if: failure()
+        uses: actions-ecosystem/action-add-labels@v1
+        with:
+          labels: waiting-response
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          number: ${{ github.event.number }}
+          repo: ${{ github.event.repository.full_name }}
