split MS SQL Managed Instance into its own package for testing

--- a/.github/labeler-pull-request-triage.yml
+++ b/.github/labeler-pull-request-triage.yml
@@ -209,6 +209,7 @@ service/monitor:
 
 service/mssql:
   - internal/services/mssql/**/*
+  - internal/services/mssqlmanagedinstance/**/*
 
 service/mysql:
   - internal/services/mysql/**/*
