fix service name

--- a/.github/labeler-pull-request-triage.yml
+++ b/.github/labeler-pull-request-triage.yml
@@ -209,6 +209,8 @@ service/monitor:
 
 service/mssql:
   - internal/services/mssql/**/*
+
+service/mssqlmanagedinstance:
   - internal/services/mssqlmanagedinstance/**/*
 
 service/mysql:
