New Resource: `azurerm_automanage_configuration` (#21490)
* initial commit with typed resource `azurerm_automanage_configuration_profile`

* remove unnecessary code piece

* change name to align with RP

* change name to align with RP

* change test case format using terrafmt tool

* update for website allowed-subcategories

* update for website allowed-subcategories

* update with make generate

* update with latest update msg

* remove setting for read-only properties.

* rename "azurerm_automanage_configuration_profile" to "azurerm_automanage_configuration"

* resolve conflict when merging main branch.

* update schema

* update model

* update model

* update 1st part of supported properties.

* update 1st part of supported properties.

* update test cases for automanage_configuration_resource.go

* update document

* update comment

* update lint

* update lint

* update modules.txt

* update generated files

* remove enable property

* add accTest and refine update logic

* fix naming and casing of resource in docs

---------

Co-authored-by: stephybun <steph@hashicorp.com>

--- a/.github/labeler-pull-request-triage.yml
+++ b/.github/labeler-pull-request-triage.yml
@@ -35,6 +35,9 @@ service/authorization:
   - internal/services/authorization/**/*
   - internal/services/managedidentity/**/*
 
+service/automanage:
+  - internal/services/automanage/**/*
+
 service/automation:
   - internal/services/automation/**/*
 
