--- a/.github/workflows/pull-request-new-commit.yaml
+++ b/.github/workflows/pull-request-new-commit.yaml
@@ -9,10 +9,7 @@ on:
     types: [synchronize]
 
 jobs:
-  issue_comment_triage:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions-ecosystem/action-remove-labels@2ce5d41b4b6aa8503e285553f75ed56e0a40bae0 # v1.3.0
-        with:
-          github_token: "${{ secrets.GITHUB_TOKEN }}"
-          labels: waiting-response
+  remove-waiting-response:
+    uses: ./.github/workflows/remove-issue-label.yml
+    with:
+      label-name: "waiting-response"
