--- a/.github/workflows/pull-request-reviewed-workflow.yaml
+++ b/.github/workflows/pull-request-reviewed-workflow.yaml
@@ -19,6 +19,7 @@ jobs:
       ghowner: ${{ steps.env_vars.outputs.ghowner }}
       prnumber: ${{ steps.env_vars.outputs.prnumber }}
       action: ${{ steps.env_vars.outputs.action }}
+      artifact_outcome: ${{ steps.env_vars.outputs.artifact_outcome }}
     steps:
       - name: Get Artifact
         id: get_artifact
@@ -36,13 +37,19 @@ jobs:
           echo "ghowner=$(cat artifact/ghowner.txt)" >>${GITHUB_OUTPUT}
           echo "prnumber=$(cat artifact/prnumber.txt)" >>${GITHUB_OUTPUT}
           echo "action=$(cat artifact/action.txt)" >>${GITHUB_OUTPUT}
+          echo "artifact_outcome=success" >>${GITHUB_OUTPUT}
 
-      - name: add waiting-reponse
-        if: steps.get_artifact.outcome == 'success' && steps.env_vars.outputs.action == 'add-waiting-response'
-        run: |
-          curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos${{ steps.env_vars.outputs.ghowner }}/${{ steps.env_vars.outputs.ghrepo }}/issues/${{ steps.env_vars.outputs.prnumber }}/labels" -d '{"labels":["waiting-response"]}'
+  add-waiting-reponse:
+    needs: add-or-remove-waiting-response
+    runs-on: ubuntu-latest
+    if: needs.add-or-remove-waiting-response.outputs.artifact_outcome == 'success' && needs.add-or-remove-waiting-response.outputs.action == 'add-waiting-response'
+    steps:
+      - run: |
+          curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos${{ needs.add-or-remove-waiting-response.outputs.ghowner }}/${{ needs.add-or-remove-waiting-response.outputs.ghrepo }}/issues/${{ needs.add-or-remove-waiting-response.outputs.prnumber }}/labels" -d '{"labels":["waiting-response"]}'
 
-      - name: remove waiting-reponse
-        if: steps.get_artifact.outcome == 'success' && steps.env_vars.outputs.action == 'remove-waiting-response'
-        run: |
-          curl -X DELETE -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos${{ steps.env_vars.outputs.ghowner }}/${{ steps.env_vars.outputs.ghrepo }}/issues/${{ steps.env_vars.outputs.prnumber }}/labels/waiting-response"
+  remove-waiting-reponse:
+    needs: add-or-remove-waiting-response
+    if: needs.add-or-remove-waiting-response.outputs.artifact_outcome == 'success' && needs.add-or-remove-waiting-response.outputs.action == 'remove-waiting-response'
+    uses: ./.github/workflows/remove-issue-label.yml
+    with:
+      label-name: "waiting-response"
